@@ -39,7 +39,6 @@ package com.sun.jersey.json.impl.provider.entity;
 
 import com.sun.jersey.api.json.JSONConfigurated;
 import com.sun.jersey.api.json.JSONConfiguration;
-import com.sun.jersey.api.json.JSONMarshaller;
 import com.sun.jersey.core.provider.jaxb.AbstractListElementProvider;
 import com.sun.jersey.json.impl.JSONHelper;
 import com.sun.jersey.json.impl.Stax2JsonFactory;
